@@ -86,7 +86,7 @@ public class Basics {
     Integer a;
 
     /* IntVal + IntVal */
-    a = new Integer(0);
+    a = Integer.valueOf(0);
     if (true) {
       a = 2;
     }
@@ -106,14 +106,14 @@ public class Basics {
     @IntRange(from = 3, to = 30) Integer test5 = a;
 
     /* IntRange + IntVal */
-    a = new Integer(0);
+    a = Integer.valueOf(0);
     if (true) {
       a = x;
     }
     @IntRange(from = 0, to = 4) Integer test7 = a;
 
     /* IntRange (Wider than 10) + IntVal */
-    a = new Integer(0);
+    a = Integer.valueOf(0);
     if (true) {
       a = y;
     }
